Fixed scrollbar issue on firefox

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -385,3 +385,8 @@ footer {
 footer * {
     background-color: white;
 }
+
+body {
+    height: 100%;
+    overflow: hidden;
+}
